App layout: Transaction input and lsiting

--- a/index.html
+++ b/index.html
@@ -8,12 +8,42 @@
 
 <body>
     <div id="app">
-        <form>
-            <input type="text">
-            <input type="select">
-            <input type="text">
-            <input type="submit">
-        </form>
+        <div id="transactionInput">
+            <form>
+                <p>
+                    <input type="text">
+                </p>
+                <p>
+                    <input type="select">
+                </p>
+                <p>
+                    <input type="text">
+                </p>
+                <p>
+                    <input type="submit" value="Add Transaction">
+                </p>
+            </form>
+        </div>
+        <div id="financeSummary">
+        </div>
+        <div id="transactionListing">
+            <ul>
+                <li>
+                    <div>
+                        <p>Transportation</p>
+                        <p>Lagos to Kampale</p>
+                    </div>
+                    <div>500</div>
+                </li>
+                <li>
+                    <div>
+                        <p>Feeding</p>
+                        <p>Lunch at Chicken Republic</p>
+                    </div>
+                    <div>3200</div>
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
 
