--- a/index.html
+++ b/index.html
@@ -10,22 +10,37 @@
     <div id="app">
         <div id="transactionInput">
             <form>
-                <p>
-                    <input type="text">
-                </p>
-                <p>
-                    <input type="select">
-                </p>
-                <p>
-                    <input type="text">
-                </p>
-                <p>
-                    <input type="submit" value="Add Transaction">
-                </p>
+                <input type="text" placeholder="Amount">
+                <br>
+                <select>
+                    <option disabled selected>Category</option>
+                    <option>Transportation</option>
+                    <option>Feeding</option>
+                    <option>Drinking</option>
+                </select>
+                <br>
+                <input type="text" placeholder="Note">
+                <br>
+                <input type="date">
+                <br>
+                <br>
+                <input type="submit" value="Add Transaction">
+                <br>
             </form>
         </div>
         <div id="financeSummary">
+            <ul>
+                <li> Total Income: 4,000,000</li>
+                <li>Total Expense: 2,500,000</li>
+                <li> Total Balance: 1,500,000</li>
+            </ul>
         </div>
+        <h2>August, 2016</h2>
+        <ul>
+            <li>Income: 1,200</li>
+            <li>Expense: 3,400</li>
+        </ul>
+        <h3>Transactions</h3>
         <div id="transactionListing">
             <ul>
                 <li>
