More dropdown options

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,9 @@
                     <option>Transportation</option>
                     <option>Feeding</option>
                     <option>Drinking</option>
-                    <option></option>
+                    <option>Clothing</option>
+                    <option>Health</option>
+                    <option>Entertainment</option>
                 </select>
                 <br>
                 <input type="text" placeholder="Note">
