Remove unwanted lines from html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-Skip to content This repository Search Pull requests Issues Gist @solomon-fibonacci Unwatch 1 Star 0 Fork 0 solomon-fibonacci/easyFinance Code Issues 0 Pull requests 0 Projects 0 Wiki Pulse Graphs Settings Branch: master Find file Copy patheasyFinance/src/index.html 7c6e584 on Sep 23 @solomon-fibonacci solomon-fibonacci Edit webpack config 1 contributor RawBlameHistory 68 lines (64 sloc) 1.87 KB
-<!doctype HTML>
 <html>
 
 <head>
@@ -8,9 +6,9 @@ Skip to content This repository Search Pull requests Issues Gist @solomon-fibona
 </head>
 
 <body>
-  <div id="app">
-    <div id="transactionInput">
-      <form>
+  <div id="container">
+    <div id="transaction-input-div">
+      <form id="transaction-input-form">
         <input type="text" placeholder="Amount">
         <br>
         <select>
@@ -66,4 +64,3 @@ Skip to content This repository Search Pull requests Issues Gist @solomon-fibona
 </body>
 
 </html>
-Contact GitHub API Training Shop Blog About © 2016 GitHub, Inc. Terms Privacy Security Status Help
