--- a/index.html
+++ b/index.html
@@ -28,39 +28,43 @@
         <br>
       </form>
     </div>
-    <div id="financeSummary">
+    <div id="data-display">
+      <div id="financeSummary">
+        <ul>
+          <li> Total Income: 4,000,000</li>
+          <li>Total Expense: 2,500,000</li>
+          <li> Total Balance: 1,500,000</li>
+        </ul>
+      </div>
+      <h2>August, 2016</h2>
       <ul>
-        <li> Total Income: 4,000,000</li>
-        <li>Total Expense: 2,500,000</li>
-        <li> Total Balance: 1,500,000</li>
+        <li>Income: 1,200</li>
+        <li>Expense: 3,400</li>
       </ul>
-    </div>
-    <h2>August, 2016</h2>
-    <ul>
-      <li>Income: 1,200</li>
-      <li>Expense: 3,400</li>
-    </ul>
-    <h3>Transactions</h3>
-    <div id="transactionListing">
-      <ul>
-        <li>
-          <div>
-            <p>Transportation</p>
-            <p>Lagos to Kampala</p>
-          </div>
-          <div>500</div>
-        </li>
-        <li>
-          <div>
-            <p>Feeding</p>
-            <p>Lunch at Chicken Republic</p>
-          </div>
-          <div>3200</div>
-        </li>
-      </ul>
+      <h3>Transactions</h3>
+      <div id="transactionListing">
+        <ul>
+          <li>
+            <div>
+              <p>Transportation</p>
+              <p>Lagos to Kampala</p>
+            </div>
+            <div>500</div>
+          </li>
+          <li>
+            <div>
+              <p>Feeding</p>
+              <p>Lunch at Chicken Republic</p>
+            </div>
+            <div>3200</div>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
-  <script src="sctipt.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.2/moment-with-locales.min.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
