Fix template intergration

--- a/index.html
+++ b/index.html
@@ -42,22 +42,24 @@
         <li>Expense: 3,400</li>
       </ul>
       <h3>Transactions</h3>
-      <div id="transactionListing">
-        <ul>
-          <li>
-            <div>
-              <p>Transportation</p>
-              <p>Lagos to Kampala</p>
-            </div>
-            <div>500</div>
-          </li>
-          <li>
-            <div>
-              <p>Feeding</p>
-              <p>Lunch at Chicken Republic</p>
-            </div>
-            <div>3200</div>
-          </li>
+      <div id="transaction-listing-div">
+        <ul id="transaction-listing">
+          <script id="template" type="text/template">
+            <li>
+              <div>
+                <p>Transportation</p>
+                <p>Lagos to Kampala</p>
+              </div>
+              <div>500</div>
+            </li>
+            <li>
+              <div>
+                <p>Feeding</p>
+                <p>Lunch at Chicken Republic</p>
+              </div>
+              <div>3200</div>
+            </li>
+          </script>
         </ul>
       </div>
     </div>
