--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <title>easy Finance</title>
 </head>
 
@@ -15,7 +16,7 @@
           <script id="cat-template" type="text/template">
             <option disabled selected>Category</option>
             {{#categories}}
-            <option>{{.}}</option>
+            <option>{{category}} ({{type}})</option>
             {{/categories}}
           </script>
         </select>
@@ -31,17 +32,21 @@
     </div>
     <div id="data-display">
       <div id="financeSummary">
-        <ul>
-          <li> Total Income: 4,000,000</li>
-          <li>Total Expense: 2,500,000</li>
-          <li> Total Balance: 1,500,000</li>
-        </ul>
+        <h2> Balance: 1,500,000.00</h2>
+        <div>
+          <div class="total">
+            <div>Total Income
+            </div>
+            <div class="total-figure">4,000,000</div>
+          </div>
+          <div class="total">
+            <div>Total Expense
+            </div>
+            <div class="total-figure">2,500,000</div>
+          </div>
+        </div>
+        <a href="#">Detailed Summary</a>
       </div>
-      <h2>August, 2016</h2>
-      <ul>
-        <li>Income: 1,200</li>
-        <li>Expense: 3,400</li>
-      </ul>
       <h3>Transactions</h3>
       <div id="transaction-listing-div">
         <ul id="transaction-listing">
@@ -61,6 +66,7 @@
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.16.6/lodash.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.2/moment-with-locales.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js"></script>
   <script src="script.js"></script>
