--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <script id="cat-template" type="text/template">
             <option disabled selected>Category</option>
             {{#categories}}
-            <option>{{category}} ({{type}})</option>
+            <option id="{{catID}}">{{category}} ({{type}})</option>
             {{/categories}}
           </script>
         </select>
