--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             {{#transactions}}
             <div class="transaction">
               <div class="particulars">
-                {{category}}
-                <br> {{note}}
+                <div class="category">{{category}}</div>
+                <div class="note">{{note}}</div>
               </div>
               <div class="amount">{{amount}}</div>
             </div>
