Change detailed summary toggle to button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <div class="total-figure">{{expenseTotal}}</div>
             </div>
           </div>
-          <a href="#">Detailed Summary</a>
+          <button>Detailed Summary</button>
         </script>
       </div>
     </div>
